--- a/style.css
+++ b/style.css
@@ -24,14 +24,19 @@ h1{
 h2{
     font-size: 30px;
     text-align: center;
-    color: black;
+    color: white;
 }
 .title{
     height: auto;
-    margin: 0px 45% 0px 45%;
+    
     border: 2px solid black;
     border-radius: 10px;
     animation: changeBackgroundColor 2s infinite;
+}
+.imagem{
+    animation: quicar 0.7s cubic-bezier(.53, -0.03, .67, 1.06);
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
 }
 #joystick{
     display: grid;
@@ -75,7 +80,7 @@ h2{
     align-items: center;
 }
 .cima2, .baixo2, .centro1, .centro3{
-    background-color: rgb(66, 66, 248);
+    background-color: #4242f8;
     border-radius: 100%;
     width: 50px;
     height: 50px;
@@ -84,7 +89,7 @@ h2{
 }
 
 .rigth{
-    background-color: rgb(247, 5, 226);
+    background-color: #f705e2;
     border-radius: 0px 150px 150px 0px;
 }
 .botaoMenorRigth{
@@ -99,15 +104,107 @@ h2{
 .center{
     background-color: rgb(66, 66, 248);
 }
-.tela{
+.container{
     height: 650px;
-    margin: 20px 20px 20px 20px;
+    margin: 25px 0px 20px 90px;
+}
+#question{
+    font-size: 30px;
+    font-weight: bold;
+}
+#question-container{
+    margin: 75px 0 75px 0;
+    height: 500px;
     display: grid;
     grid-template-rows: 30% 70%;
     text-align: center;
     justify-content: center;
+    
+}
+#question-container button{
+    height: auto;
+    display: grid;
+    text-align: center;
+    justify-content: center;
+    grid-template-columns: 100%;
+    font-size: 20px;
 }
 
 h1{
-    color:  rgb(233, 236, 56);
+    color:#e9ec38;
+}
+
+  .container {
+    width: 800px;
+    max-width: 80%;
+    background-color: white;
+    border-radius: 5px;
+    padding: 10px;
+    box-shadow: 0 0 10px 2px;
+  }
+  
+  .btn-grid {
+    display: grid;
+    grid-template-columns: 100%;
+    gap: 10px;
+    margin: 20px 0;
+  }
+  
+  .btn {
+    --hue: var(--hue-neutral);
+    border: 0px solid hsl(var(--hue), 100%, 30%);
+    background-color: hsl(var(--hue), 100%, 50%);
+    border-radius: 5px;
+    padding: 5px 10px;
+    color: white;
+    outline: none;
+  }
+  
+  .btn:hover {
+    border-color: black;
+  }
+  
+  .btn.correct {
+    --hue: var(--hue-correct);
+    color: black;
+  }
+  .btn.wrong {
+    --hue: var(--hue-wrong);
+  }
+  
+  .start-btn, .next-btn {
+    margin-top: 50px;
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding: 10px 20px;
+    background-color: rgb(66, 66, 248);
+  }
+  
+  .controls {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .hide {
+    display: none;
+  }
+  *, *::before, *::after {
+    box-sizing: border-box;
+    font-family: Gotham Rounded;
+  }
+  
+  :root {
+    --hue-neutral: 200;
+    --hue-wrong: 0;
+    --hue-correct: 145;
+  }
+
+@keyframes quicar {
+    0%{
+        transform: translateY(0px);
+    }
+    50%{
+        transform: translateY(25%);
+    }
 }
