--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @keyframes changeBackgroundColor {
     0% {
         box-shadow: 0 3px 32px 0 rgb(66, 66, 248);
-        transition: 0.7s
+        transition: 0.7s;
     }
     100% {
         box-shadow: 0 15px 32px 0 rgb(66, 66, 248);
