--- a/responsive.css
+++ b/responsive.css
@@ -1,7 +1,6 @@
 @media (max-width: 1000px)
 {
   body{
-    background-color: white;
     width: 100%;
     height: 300px;
   }
@@ -43,22 +42,32 @@ h5{
 
 .botaoMaior{
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
+    width: 75px;
+    height: 75px;
     box-shadow: 5px 5px 2px;
+    margin-left: 5px;
 }
 
 .botaoMaiorDireito{
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
+    width: 75px;
+    height: 75px;
     box-shadow: 5px 5px 2px;
+    margin-left: 5px;
 }
 
-.start-btn, .next-btn {
+.start-btn{
     width: 50px;
     height: 50px;
-    font-size: 15px;
+    font-size: 20px;
+    margin: 12px 15px 0px 0;
+}
+
+.next-btn {
+    width: 50px;
+    height: 50px;
+    font-size: 20px;
+    margin: 12px 15px 0px 10px;
 }
 
 .botaoMenorRigth{
@@ -66,22 +75,19 @@ h5{
 }
 
 .cima2, .baixo2, .centro1, .centro3{
-    background-color: #4242f8;
-    border-radius: 100%;
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     box-shadow: 5px 5px 2px;
-    justify-content: center;
 }
 
 .logo img{
-    margin-top: 75px;
-    width: 200px;
+    margin-top: 70px;
+    width: 250px;
 }
 
 #question{
     margin-top: 40px;
-    font-size: 15px;
+    font-size: 16px;
 }
 
 #question-container{
@@ -89,7 +95,7 @@ h5{
     grid-template-rows: 30% 70%;
 }
 #question-container button{
-    font-size: 10px;
+    font-size: 12px;
 }
 
 .resul{
@@ -99,14 +105,15 @@ h5{
 }
 
 .resul img{
-    width: 110px;
-    margin-left: 15px;
+    width: 150px;
+    margin-top: 5px;
+    margin-left: 5px;
 }
 
 .resul h4{
-    font-size: 15px;
+    font-size: 18px;
 }
 
 .resul h5{
-    font-size: 10px;
+    font-size: 12px;
 }
