--- a/responsive.css
+++ b/responsive.css
@@ -4,8 +4,7 @@
     width: 100%;
     height: 300px;
   }
-}
-
+  
 h1{
     font-size: 15px;
 }
@@ -110,10 +109,16 @@ h5{
     margin-left: 5px;
 }
 
+.gif{
+    align-items: center;
+    height: 100px;
+} 
+
 .resul h4{
     font-size: 18px;
 }
 
 .resul h5{
     font-size: 12px;
+}
 }
