--- a/style.css
+++ b/style.css
@@ -28,17 +28,21 @@ h2{
 
 .resul{
     display: grid;
-    grid-template-rows: 40% 30% 40%;
+    grid-template-rows: 30% 20% 30% 20%;
     justify-content: center;
     align-items: center;
     text-align: center;
     height: 600px;
-    padding-top: 50px;
-    margin: 0 20px 0 20px;
+    padding-top: 25px;
+    margin: 50px 20px 0 20px;
 }
 .resul img{
     align-items: center;
     width: 330px;
+} 
+.gif{
+    align-items: center;
+    height: 300px;
 } 
 
 h4{
