--- a/style.css
+++ b/style.css
@@ -28,13 +28,13 @@ h2{
 
 .resul{
     display: grid;
-    grid-template-rows: 40% 30% 40%;
+    grid-template-rows: 40% 30% 30%;
     justify-content: center;
     align-items: center;
     text-align: center;
     height: 600px;
-    padding-top: 50px;
-    margin: 0 20px 0 20px;
+    padding-top: 25px;
+    margin: 50px 20px 0 20px;
 }
 .resul img{
     align-items: center;
@@ -46,12 +46,14 @@ h4{
     font-size: 50px;
     text-align: center;
     color: #e9ec38;
+    margin-top: 100px;
 }
 h5{
     font-size: 25px;
     text-align: center;
     opacity: 0.6;
     color: #e9ec38;
+    margin-top: 100px;
 }
 
 .title{
